add similar classes

--- a/mappings/evora_mappings.ipynb
+++ b/mappings/evora_mappings.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "def get_similar(prop):\n",
     "    encoded_iri = urllib.parse.quote(urllib.parse.quote(prop['iri'], safe=''), safe='')\n",
-    "    similar = requests.get(f\"https://wwwdev.ebi.ac.uk/ols4/api/v2/ontologies/evorao/properties/{encoded_iri}/similar?size=30\").json()\n",
+    "    similar = requests.get(f\"https://wwwdev.ebi.ac.uk/ols4/api/v2/ontologies/evorao/properties/{encoded_iri}/llm_similar?size=30\").json()\n",
     "    return similar\n",
     "\n",
     "for prop in properties:\n",
@@ -40,6 +40,48 @@
     "\n",
     "df.to_csv('evorao_similar_properties.csv', index=False)\n",
     "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dd18ff1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import urllib.parse\n",
+    "import pandas as pd\n",
+    "\n",
+    "classes = requests.get(\"https://wwwdev.ebi.ac.uk/ols4/api/v2/ontologies/evorao/classes?size=1000\").json()['elements']\n",
+    "\n",
+    "def get_similar(prop):\n",
+    "    encoded_iri = urllib.parse.quote(urllib.parse.quote(prop['iri'], safe=''), safe='')\n",
+    "    similar = requests.get(f\"https://wwwdev.ebi.ac.uk/ols4/api/v2/ontologies/evorao/classes/{encoded_iri}/llm_similar?size=30\").json()\n",
+    "    return similar\n",
+    "\n",
+    "for cl in classes:\n",
+    "    cl['similar'] = get_similar(cl)\n",
+    "\n",
+    "rows = []\n",
+    "for cl in classes:\n",
+    "    for similar in cl['similar']['elements']:\n",
+    "        rows.append({\n",
+    "            'iri': cl['iri'],\n",
+    "            'label': cl['label'][0],\n",
+    "            'similar_label': similar['label'][0],\n",
+    "            'similar_ontology': similar['ontologyId'],\n",
+    "            'score': similar['score'],\n",
+    "            'similar_iri': similar['iri']\n",
+    "        })\n",
+    "\n",
+    "\n",
+    "df = pd.DataFrame(rows)\n",
+    "df = df.sort_values(by=['iri', 'score'], ascending=[True, False])\n",
+    "\n",
+    "df.to_csv('evorao_similar_classes.csv', index=False)\n",
     "\n",
     "\n"
    ]
